# prodigy-lig

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  contact-chainID_allAtoms.cpp  prodigy_lig.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-publish.yml  unittests.yml
data/: test_data.json
prodigy_lig/: __init__.py  prodigy_lig.py
src/prodigy_lig/: prodigy_lig.py
tests/: test_prodigy_lig.py
