[tool.poetry]
name = "prodigy-lig"
version = "1.1.1"
description = "Calculate protein-small molecule binding affinities."
authors = ["BonvinLab <bonvinlab.support@uu.nl>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
biopython = "^1.79"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.1"

[tool.poetry.scripts]
prodigy_lig = "prodigy_lig.prodigy_lig:main"

[tool.setuptools]
include-package-data = true
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
